[gd_scene load_steps=8 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Level/plataforma.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/jumpi.tscn" type="PackedScene" id=3]
[ext_resource path="res://Camera2D.gd" type="Script" id=4]
[ext_resource path="res://assets/Background/bg_layer4.png" type="Texture" id=5]
[ext_resource path="res://assets/Background/bg_layer2.png" type="Texture" id=6]
[ext_resource path="res://assets/Background/bg_layer1.png" type="Texture" id=7]

[node name="Node" type="Node"]
pause_mode = 1
script = ExtResource( 1 )

[node name="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 34.3775, 223.75 )

[node name="StaticBody2D7" parent="." instance=ExtResource( 2 )]
position = Vector2( -250.775, -946.488 )

[node name="StaticBody2D8" parent="." instance=ExtResource( 2 )]
position = Vector2( -245.737, -1168.15 )

[node name="StaticBody2D9" parent="." instance=ExtResource( 2 )]
position = Vector2( -240.7, -1384.78 )

[node name="StaticBody2D10" parent="." instance=ExtResource( 2 )]
position = Vector2( -240.208, -1581.26 )

[node name="StaticBody2D4" parent="." instance=ExtResource( 2 )]
position = Vector2( 578.313, -436.742 )

[node name="StaticBody2D5" parent="." instance=ExtResource( 2 )]
position = Vector2( -61.0495, -429.245 )

[node name="StaticBody2D6" parent="." instance=ExtResource( 2 )]
position = Vector2( -265.536, -689.397 )

[node name="StaticBody2D3" parent="." instance=ExtResource( 2 )]
position = Vector2( -249.279, -160.738 )

[node name="StaticBody2D2" parent="." instance=ExtResource( 2 )]
position = Vector2( 344.627, -13.3694 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -6.58569, -25.7947 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
visible = false
motion_scale = Vector2( 0.2, 0.2 )

[node name="Background" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1033.09, -87.7078 )
scale = Vector2( 1, 1.05326 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 3075, 1536 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1145.25, -3849.84 )
texture = ExtResource( 6 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 1038.68, -1630.58 )
texture = ExtResource( 7 )

[node name="plataform_container" type="Node" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="plataform_container"]
[connection signal="viewport_exited" from="plataform_container/VisibilityNotifier2D" to="." method="_on_exited_left"]
